# DC_charts_loader

./: .coverage  .gitignore  CHART_SCREENSHOT_FIX.md  CLI_IMPLEMENTATION.md  README.md  SCREENSHOT_FIX.md  UNIT_TEST_FIXES.md  claude.md  cli.py  config.json  config_default.json  main.py  pyproject.toml  readme.md  requirements.txt  save_project.py  test_session_shading.py
nbs/: 01_test_loader.ipynb  04_img_to_xls.ipynb  05_vert_span.ipynb
src/: _ui.py  config.py  imgur_api.py  logger.py  models.py  schemas.py  ui.py
src/cli/: __init__.py  __main__.py  file_selector.py  menu.py
src/ui/: __init__.py  models.py  utils.py
tests/: test_cli_integration.py  test_config.py  test_coverage_completion.py  test_final_coverage.py  test_imgur_api.py  test_models.py  test_ui.py  test_ui_init.py  test_ui_models.py  test_ui_utils.py
tests/fixtures/: sample_data.py
