[project]
name = "dc-charts-loader"
version = "0.1.0"
description = "A chart loading utility for data visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightweight-charts==2.1",
    "loguru>=0.7.3",
    "openpyxl==3.1.5",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "pyarrow==20.0.0",
    "pydantic==2.11.5",
    "pyimgur==0.8.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
